--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pupper Page</title>
+    <style>
+    h2 {
+        color: blue;
+        font-style: italic;
+    }
+    td {
+        padding: 50px;
+    }
+    div {
+        font-size: 30px;
+    }
+
+    </style>
 </head>
 <body>
-    There are two puppers in this household who live charmed lives.  One is Ruggers McPiddlesworth and the other is just Lucy. 
+    There are two puppers in this household who live charmed lives. 
+    <br>One is Ruggers McPiddlesworth and the other is Lucy Goosey.<hr>
+    
+    <div> 
+        <h2>Ruggers B. McPiddlesworth </h2>
+        <img src="Rugby.jpg">
+    </div> 
+    <div>
+        <h2 style="color: aqua"> Lucy Goosey </h2>
+        <img src="lucy.jpg">
+    </div>
+    <div>
+    <table>
+        <th>Ruggers</th>
+        <th>Lucy</th>
+      
+        <tr>
+            <td>Sleek genius</td>
+            <td>Floofy slacker</td>
+        </tr>
+        <tr>
+            <td>Picky eater</td>
+            <td>No teeth wonder</td>
+        </tr>
+    </table>
+    </div>
 </body>
 </html>
